imp-01:
    представление объекта. декодирование полей