@@ -1,2 +1,4 @@
 imp-01:
     представление объекта. декодирование полей
+    shassy.py added MyModuleIdent
+    scanner_lib.py used MyModuleIdent, save long_path to module
